Quick fix for overlapping tick and text

--- a/src/components/utils/style.scss
+++ b/src/components/utils/style.scss
@@ -128,7 +128,6 @@
     display:flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
     font-size: 25px;
     color: black;
     margin-right: 2%;
